samples/_failures_safe/1761092566_bbc970_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_090ee35d.c: In function ‘main’:
./samples/SAFE/__tmp_090ee35d.c:164:20: error: missing terminating " character
  164 |             printf("Event handling failed
      |                    ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_090ee35d.c:164:13: error: expected expression at end of input
  164 |             printf("Event handling failed
      |             ^~~~~~
./samples/SAFE/__tmp_090ee35d.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_090ee35d.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_090ee35d.c:164:13: error: expected declaration or statement at end of input
